# qqbot-JXH

./: .gitignore  Dockerfile  README.md  compose.yaml  config.example.yaml  main.py  pyproject.toml
bot/: appsettings.json
data/: data.xlsx
ws/: loading.py  model.py  request_quote.py  requirements.txt  server.py  server.py.bak
