[project]
name = "qqbot-jxh"
version = "1.0.0"
description = "精小弘机器人为你服务"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "pydantic>=2.11.7",
    "pyyaml>=6.0.2",
    "requests>=2.32.5",
    "sanic>=25.3.0",
    "schedule>=1.2.2",
    "xlrd>=2.0.2",
]
